Autobuild doesn't seem to support ARG yet

--- a/elm/0.15/Dockerfile
+++ b/elm/0.15/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Michael Porter <mike@codesimple.net>
 
 # alias elm='docker run -it --rm -v "$(pwd):/code" -w "/code" -e "HOME=/tmp" -u $UID:$GID -p 8000:8000 codesimple/elm'
  
-ARG ELM_VER=0.15.1
+ENV ELM_VER=0.15.1
 
 RUN apt-get update && apt-get install -y \
    curl \
