Use the very latest version

--- a/elm/0.19/Dockerfile
+++ b/elm/0.19/Dockerfile
@@ -2,6 +2,6 @@ FROM node:7.2.0
 
 MAINTAINER Michael Porter <mike@codesimple.net>
 
-RUN npm install -g elm@0.19.0
+RUN npm install -g elm@0.19.0-bugfix2
 
 ENTRYPOINT ["elm"]
