Upgrade to ver 0.19.1 and avoid use of npm

--- a/elm/0.19/Dockerfile
+++ b/elm/0.19/Dockerfile
@@ -1,7 +1,9 @@
-FROM node:10.16.0-stretch-slim
+FROM alpine:3.10.3
 
 MAINTAINER Michael Porter <mike@codesimple.net>
 
-RUN npm install --unsafe-perm -g elm@0.19.0-no-deps
+RUN wget -O - 'https://github.com/elm/compiler/releases/download/0.19.1/binary-for-linux-64-bit.gz' \
+    | gunzip -c >/usr/local/bin/elm
+RUN chmod +x /usr/local/bin/elm
 
 ENTRYPOINT ["elm"]
